Style: add header styles

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,6 +1,6 @@
 //Fonts
-$fontTitle: 'Raleway', sans-serif;
-$fontBody: 'Open Sans', sans-serif;
+$font-title: 'Raleway', sans-serif;
+$font-body: 'Open Sans', sans-serif;
 
 //Colors
 
