--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,74 @@
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+html {
+  font-size: 100%;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  color: white;
+  line-height: 1.3;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3 {
+  font-family: "Raleway", sans-serif;
+  margin-top: 0px;
+}
+
+h2.small {
+  font-size: 1.3em;
+}
+
+h2.large {
+  font-size: 1.6em;
+}
+
+p {
+  margin-top: 0px;
+  margin-bottom: 1.5em;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+li {
+  list-style-type: none;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 1rem;
+  display: grid;
+}
+
+.header {
+  background-color: #1c2431;
+}
+
+.header .container {
+  grid-template-columns: 1fr 4fr 2fr;
+  grid-row: auto;
+}
+
+.header__logo {
+  grid-column: 1/2;
+}
+
+.header__menu {
+  grid-column: 6/7;
+  align-self: center;
+}
+
+.header__menu a:not(:last-child) {
+  padding-right: 2.5rem;
+}
 /*# sourceMappingURL=style.css.map */
