--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -9,6 +9,7 @@ $introBG: rgb(28, 36, 49);
 $mainBg: rgb(24, 31, 42);
 $footerBg: hsl(216, 53%, 9%);
 $testimonialBg: hsl(219, 30%, 18%);
+$bodyText: #fefefe;
 $white: hsl(0, 0%, 100%);
 
 //Accent
