--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -11,7 +11,7 @@ html {
 
 body {
     font-family: $font-body;
-    color: $white;
+    color: $bodyText;
     line-height: 1.3;
     margin: 0;
     padding: 0;
