--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 
 body {
   font-family: "Open Sans", sans-serif;
-  color: white;
+  color: #fefefe;
   line-height: 1.3;
   margin: 0;
   padding: 0;
@@ -46,7 +46,7 @@ li {
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 2rem 1.5rem;
   display: grid;
 }
 
@@ -62,6 +62,7 @@ li {
 
 .header__logo {
   grid-column: 1/2;
+  align-self: center;
 }
 
 .header__logo img {
@@ -71,6 +72,15 @@ li {
 .header__menu {
   grid-column: 5/7;
   align-self: center;
+}
+
+.header__menu a {
+  transition: font 200ms ease-in-out;
+}
+
+.header__menu a:hover {
+  text-decoration: underline;
+  font-weight: 700;
 }
 
 .header__menu a:not(:last-child) {
