--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -11,6 +11,7 @@ html {
 
 body {
     font-family: $font-body;
+    font-size: .9375rem;
     color: $bodyText;
     line-height: 1.3;
     margin: 0;
@@ -31,8 +32,8 @@ h2.large {
 }
 
 p {    
-    margin-top: 0px;
-    margin-bottom: 1.5em;
+    margin: 0px;
+    line-height: 1.6;
 }
 
 a {
@@ -40,6 +41,3 @@ a {
     color: $white;
 }
 
-li {
-    list-style-type: none;
-}
