--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html {
 
 body {
   font-family: "Open Sans", sans-serif;
+  font-size: .9375rem;
   color: #fefefe;
   line-height: 1.3;
   margin: 0;
@@ -30,8 +31,8 @@ h2.large {
 }
 
 p {
-  margin-top: 0px;
-  margin-bottom: 1.5em;
+  margin: 0px;
+  line-height: 1.6;
 }
 
 a {
@@ -39,15 +40,25 @@ a {
   color: white;
 }
 
-li {
-  list-style-type: none;
-}
-
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 2rem 1.5rem;
   display: grid;
+}
+
+.container_mobile_PX {
+  padding: 0 1.8125rem;
+}
+
+.container_small {
+  max-width: 650px;
+}
+
+.btn {
+  display: inline-block;
+  width: 15rem;
+  height: 3rem;
+  background-color: linear-gradient to right, #65e2d9, #339ecc;
 }
 
 .header {
@@ -55,9 +66,10 @@ li {
 }
 
 .header .container {
-  grid-template-columns: 1fr 4fr 2fr;
+  grid-template-columns: 1fr 3fr 2fr;
   grid-row: 1fr;
   grid-gap: 1rem;
+  padding: 1.375rem 1.1875rem 0 1.1875rem;
 }
 
 .header__logo {
@@ -66,7 +78,7 @@ li {
 }
 
 .header__logo img {
-  max-width: 150px;
+  max-width: 5rem;
 }
 
 .header__menu {
@@ -84,6 +96,27 @@ li {
 }
 
 .header__menu a:not(:last-child) {
-  padding-right: 1.5rem;
+  padding-right: 1.1875rem;
+}
+
+.hero {
+  text-align: center;
+  background-color: #1c2431;
+  padding-top: 3.125rem;
+}
+
+.hero__image img {
+  max-width: 95%;
+  padding: 2.625rem 0  2.4375rem 0;
+}
+
+.hero__text h1 {
+  font-size: 1.5rem;
+  padding-bottom: 1.8125rem;
+  line-height: 1.6;
+}
+
+.hero__text p {
+  margin-bottom: 2.0625rem;
 }
 /*# sourceMappingURL=style.css.map */
