--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,7 +1,6 @@
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  display: grid;
 }
 
 .container_mobile_PX {
@@ -14,7 +13,12 @@
 
 .btn {
   display: inline-block;
+  font-size:.8125rem;
+  font-weight: 700;
   width: 15rem;
   height: 3rem;
-  background-color: linear-gradient (to right, $ctaCyan, $ctaBlue);
+  padding: 1.25rem;
+  border-radius: 1.75rem;
+  background-image: linear-gradient(to right, $ctaCyan, $ctaBlue);
+  
 } 
