--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -6,25 +6,25 @@
     &__image {
     
         img {
-        max-width: 95%;
-        padding: 2.625rem 0  2.4375rem 0;
+            max-width: 95%;
+            padding: 2.625rem 0  2.4375rem 0;
         }
     }
 
     &__text {
 
-        h1{
-        font-size: 1.5rem;
-        padding-bottom: 1.8125rem;
-        line-height: 1.6;
+        h1  {
+            font-size: 1.5rem;
+            padding-bottom: 1.8125rem;
+            line-height: 1.6;
         }
 
         p {
-        margin-bottom: 2.0625rem;
+            margin-bottom: 2.0625rem;
         }
+    }
 
-        a {
-            
-        }
+    &__cta {
+
     }
 }
