--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -5,7 +5,7 @@ $font-body: 'Open Sans', sans-serif;
 //Colors
 
 //Primary
-$introBG: rgb(28, 36, 49);
+$introBg: rgb(28, 36, 49);
 $mainBg: rgb(24, 31, 42);
 $footerBg: hsl(216, 53%, 9%);
 $testimonialBg: hsl(219, 30%, 18%);
