--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,9 +1,8 @@
 .header {
-    background-color: $introBG;
+    background-color: $introBg;
 
     .container{
         grid-template-columns: 1fr 3fr 2fr;
-        grid-row: 1fr;
         grid-gap: 1rem;
         padding: 1.375rem 1.1875rem 0 1.1875rem;
     }
