--- a/css/style.css
+++ b/css/style.css
@@ -110,11 +110,27 @@ a {
 
 .hero .container {
   justify-items: center;
+  z-index: 1;
 }
 
 .hero__image img {
-  max-width: 95%;
+  max-width: 90%;
   padding: 2.625rem 0  2.4375rem 0;
+}
+
+.hero__text {
+  position: relative;
+  content: "";
+  position: absolute;
+  background-image: url(/images/bg-curvy-mobile.svg);
+  width: 98%;
+  height: 58%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  left: 0;
+  /* top: 120px; */
+  bottom: 0;
 }
 
 .hero__text h1 {
@@ -123,7 +139,11 @@ a {
   line-height: 1.6;
 }
 
-.hero__text p {
+.hero__cta {
+  background-color: #181f2a;
+}
+
+.hero__cta p {
   margin-bottom: 2.0625rem;
 }
 
