--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,14 @@ a {
   font-weight: 700;
   width: 15rem;
   height: 3rem;
-  padding: 1.25rem;
+  padding: 1rem;
   border-radius: 1.75rem;
   background-image: linear-gradient(to right, #65e2d9, #339ecc);
+  transition: backgorund 300ms ease-in-out;
+}
+
+.btn:hover {
+  background: linear-gradient(to right, #339ecc, #339ecc);
 }
 
 .header {
@@ -110,41 +115,47 @@ a {
 
 .hero .container {
   justify-items: center;
-  z-index: 1;
+}
+
+.hero__image {
+  position: relative;
+  z-index: 2;
 }
 
 .hero__image img {
+  position: relative;
   max-width: 90%;
   padding: 2.625rem 0  2.4375rem 0;
 }
 
-.hero__text {
+.hero__text h1 {
   position: relative;
+  font-size: 1.5rem;
+  padding-bottom: 1.5625rem;
+  line-height: 1.6;
+  z-index: 1;
+}
+
+.hero__text h1::before {
   content: "";
   position: absolute;
   background-image: url(/images/bg-curvy-mobile.svg);
-  width: 98%;
-  height: 58%;
+  width: 100%;
+  height: 159%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
   left: 0;
-  /* top: 120px; */
   bottom: 0;
+  z-index: -1;
 }
 
-.hero__text h1 {
-  font-size: 1.5rem;
-  padding-bottom: 1.8125rem;
-  line-height: 1.6;
-}
-
-.hero__cta {
+.hero__subcta {
   background-color: #181f2a;
 }
 
-.hero__cta p {
-  margin-bottom: 2.0625rem;
+.hero__subhead {
+  padding-bottom: 2.375rem;
 }
 
 .feature {
