--- a/app/scss/_feature.scss
+++ b/app/scss/_feature.scss
@@ -1,5 +1,4 @@
 .feature {
-    background-color: $mainBg;
     padding-top: 8.8125rem;
     text-align: center;
     
@@ -14,8 +13,10 @@
         }
 
         h2 {
-            padding-bottom: 1.25rem;
+            font-size: 1.125rem;
+            padding-bottom: 1rem;
         }
+        
 
     }
 }
