--- a/app/scss/_productive.scss
+++ b/app/scss/_productive.scss
@@ -1,8 +1,13 @@
 .productive {
     padding-top: 11rem;
 
-    &__image {
+    .container {
+        
+    }
 
+    &__image {
+        justify-self: center;
+        
         img{
             max-width:100%;
             margin-bottom: 3.3125rem;
