--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,10 @@ a {
   padding-top: 11rem;
 }
 
+.productive__image {
+  justify-self: center;
+}
+
 .productive__image img {
   max-width: 100%;
   margin-bottom: 3.3125rem;
