--- a/css/style.css
+++ b/css/style.css
@@ -216,4 +216,41 @@ a {
 .productive__text .fylo-work_link a:hover {
   color: white;
 }
+
+.container {
+  padding-top: 9.5625rem;
+}
+
+.testimonial__card {
+  justify-items: center;
+  background-color: #1c2431;
+  font-size: 0.75rem;
+  width: 17.5rem;
+  height: 11rem;
+  padding: 1.375rem;
+  border-radius: 5px;
+}
+
+.testimonial__card__text {
+  padding-bottom: 1.25rem;
+}
+
+.testimonial__card .bio {
+  display: grid;
+  grid-template-columns: .7fr 4fr;
+  grid-gap: 10px;
+}
+
+.testimonial__card .bio__image {
+  align-self: center;
+}
+
+.testimonial__card .bio__image img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.testimonial__card .bio__detail .name {
+  font-weight: 700;
+}
 /*# sourceMappingURL=style.css.map */
