--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h1, h2, h3 {
 }
 
 h2.small {
-  font-size: 1.3em;
+  font-size: 1.2em;
 }
 
 h2.large {
@@ -273,5 +273,37 @@ a {
 
 .testimonial__card .bio__detail .name {
   font-weight: 700;
+}
+
+.signup {
+  padding-top: 10rem;
+  text-align: center;
+}
+
+.signup__container {
+  background-color: #1c2431;
+  padding: 2.625rem 1.6875rem;
+  border-radius: 5px;
+}
+
+.signup__container h2 {
+  margin-bottom: 1.625rem;
+}
+
+.signup__container p {
+  margin-bottom: 2.125rem;
+}
+
+.signup__form {
+  display: grid;
+  grid-gap: 1.5625rem;
+}
+
+.signup__form #email, .signup__form .btn {
+  width: 100%;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  padding: 1rem 1.875rem;
 }
 /*# sourceMappingURL=style.css.map */
