--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -38,10 +38,17 @@
         grid-gap:.625rem;
 
         a {
-            width: 20px;
-            height:20px;
-            border:1px solid $white;
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            border: 1px solid white;
             border-radius: 50%;
+            padding: 5px 9px; 
+            transition: color 300ms ease-in-out;
+
+            &:hover {
+                color:$ctaCyan;
+            }
         }
     }
 }
