Fix: testimonial quote image resposnie issue

--- a/app/scss/_testimonial.scss
+++ b/app/scss/_testimonial.scss
@@ -2,24 +2,9 @@
     padding-top: 9.5625rem;
 
     .container {
-        position: relative;
         justify-items: center;
         grid-gap:1.3725rem;
-        z-index:1;
-
-        &::after {
-        position: absolute;
-        content: "";
-        background-image: url(/images/bg-quotes.png);
-        width: 48px;
-        height: 7%;
-        background-repeat: no-repeat;
-        left: 43px;
-        top: -31px;
-        background-position: center center;
-        background-size: 55%;
-        z-index: -1;
-        }
+        
     }
 
     &__card {
@@ -54,6 +39,25 @@
                     font-weight: 700;
                 }
             }
+        }
+    }
+
+    .one {
+        position: relative;
+        z-index:1;
+        
+        &::before {
+            position: absolute;
+            content: "";
+            background-image: url(/images/bg-quotes.png);
+            width: 56px;
+            height: 37px;
+            background-repeat: no-repeat;
+            top: -27px;
+            left: 11px;
+            background-size: 60%;
+            z-index: -1;
+            background-position: center center;
         }
     }
 }
