--- a/css/style.css
+++ b/css/style.css
@@ -223,24 +223,8 @@ a {
 }
 
 .testimonial .container {
-  position: relative;
   justify-items: center;
   grid-gap: 1.3725rem;
-  z-index: 1;
-}
-
-.testimonial .container::after {
-  position: absolute;
-  content: "";
-  background-image: url(/images/bg-quotes.png);
-  width: 48px;
-  height: 7%;
-  background-repeat: no-repeat;
-  left: 43px;
-  top: -31px;
-  background-position: center center;
-  background-size: 55%;
-  z-index: -1;
 }
 
 .testimonial__card {
@@ -273,6 +257,25 @@ a {
 
 .testimonial__card .bio__detail .name {
   font-weight: 700;
+}
+
+.testimonial .one {
+  position: relative;
+  z-index: 1;
+}
+
+.testimonial .one::before {
+  position: absolute;
+  content: "";
+  background-image: url(/images/bg-quotes.png);
+  width: 56px;
+  height: 37px;
+  background-repeat: no-repeat;
+  top: -27px;
+  left: 11px;
+  background-size: 60%;
+  z-index: -1;
+  background-position: center center;
 }
 
 .signup {
