--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -3,7 +3,32 @@
     //Style goes here
 }
 
+//Medium:640px, lrg: 1024px, Xlrg:1400px
+$breakpoints-up: (
+    "medium": "40em",
+    "large": "64em",
+    "xlarge": "87.5em",
+);
 
-$breakpoints-up: {
-    "small": "23.4375rem",
+//Medium:639px, lrg: 1023px, Xlrg:1399px
+$breakpoints-down:(
+    "small": "39.9375em",
+    "medium": "63.9375em",
+    "large": "87.4375em",
+);
+
+@mixin breakpoint-up ($size) {
+
+    @media (min-width: map-get($breakpoints-up, $size)) {
+        @content;
+    }
+
+}
+
+@mixin breakpoint-down ($size) {
+
+    @media (max-width: map-get($breakpoints-down, $size)) {
+        @content;
+    }
+
 }
